# ChangeLog for sys-auth/pam_ssh
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-auth/pam_ssh/ChangeLog,v 1.49 2013/12/14 14:51:58 johu Exp $

  14 Dec 2013; Johannes Huber <johu@gentoo.org> pam_ssh-1.98.ebuild:
  x86 stable, bug #459960

*pam_ssh-1.98 (06 Nov 2013)

  06 Nov 2013; Pacho Ramos <pacho@gentoo.org> +pam_ssh-1.98.ebuild:
  Version bump

  01 Nov 2012; Ulrich Müller <ulm@gentoo.org> pam_ssh-1.97-r1.ebuild,
  pam_ssh-1.97-r2.ebuild, pam_ssh-1.97-r3.ebuild:
  Specify LICENSE more precisely.

  24 May 2012; Mike Frysinger <vapier@gentoo.org> pam_ssh-1.97-r2.ebuild,
  pam_ssh-1.97-r3.ebuild:
  Inherit eutils for epatch.

  21 May 2012; Kacper Kowalik <xarthisius@gentoo.org> pam_ssh-1.97-r1.ebuild:
  Add missing inheritance of eutils.eclass

*pam_ssh-1.97-r3 (31 Oct 2010)

  31 Oct 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  +pam_ssh-1.97-r3.ebuild, +files/pam_ssh-1.97-EOF.patch:
  Finally fix bug #266603; thanks to Kevin Lyles for reporting, and the
  anonymous user for the patch.

  25 Oct 2010; Jeroen Roovers <jer@gentoo.org> pam_ssh-1.97-r2.ebuild:
  Stable for HPPA (bug #339176).

  16 Oct 2010; Brent Baude <ranger@gentoo.org> pam_ssh-1.97-r2.ebuild:
  stable ppc, bug 339176

  10 Oct 2010; Raúl Porcel <armin76@gentoo.org> pam_ssh-1.97-r2.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #339176

  05 Oct 2010; Markus Meier <maekke@gentoo.org> pam_ssh-1.97-r2.ebuild:
  amd64/x86 stable, bug #339176

  29 Sep 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  -files/pam_ssh-1.91-debian.patch, -files/pam_ssh-1.91-openssl-0.9.8.patch,
  -files/pam_ssh-1.91-syslog.patch, -pam_ssh-1.92.ebuild,
  -pam_ssh-1.97.ebuild, pam_ssh-1.97-r2.ebuild, -files/system-auth.example:
  Fix dependencies over OpenSSH (bug #282993; thanks to Csaba Tóth for
  reporting and Constanze Hausner for the solution). Also cleanup old
  versions.

  07 Aug 2010; Diego E. Pettenò <flameeyes@gentoo.org>