@@ -1,0 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST Yamlog-0.9.tar.gz 6406 SHA256 56d9688a3cf25cb9e52023d26cc446e3cf5aece5f455a217b15da89dc86e7cbe SHA512 6743d4db7cff8ffe2f4a8585508267a653639f514630f0ba2184c5ec1c33d59d59ffc26bf22a5e86bd729bf98874d17db4d0c8ec484d7d74d4276da99c703af0 WHIRLPOOL 5d15ad2cd3e1641e66c30b733deab81bb52ba0845617dc6fd6011f62c3e6a731e27ef6954361bfb50404bc1fdf15f1413a2cfab0e15b4935adf04e39421b7e1f
+EBUILD Yamlog-0.9.ebuild 874 SHA256 089bc43e25b8b47cc4518f8e7c349f4bd779bae6bb9540aed4f80e84274db130 SHA512 9a07451b4b658d718be1001451819394d7a359a02e861f95646f6af88b7c267bb98160ee4f4ae071a3e7ccd609c3bf5a8d888cea32c083d4469cd56749f75c43 WHIRLPOOL d1a53eddb120bd846ce11e0616cd59396d42eab856164eb91f009e1230c353dc0a99968e072675410fd06ee372fa8ceb9bb5e1d2c5fcfaf865c983b0185e1283
+MISC ChangeLog 489 SHA256 febd247909e9b2ce307b1466956f51c74305734f54cdf6d78734c04c01ca4838 SHA512 134e23ca13b51325333a3445c4a1fc3cf023561d797dc90f5a6a4a910851f4a31f965934a6f1fac0668e1c008c4d516a3d1bc58812ccb3ebdabb754f4cb2cc6b WHIRLPOOL f6e00c9b34de52fec838ec43e16621b6c190d683a4daa8bec01689f0aa34da8cef75baf6feff76f3c727b6b2d29773d9d507bf4f49abb3e58fe0750e7e42aa63
+MISC metadata.xml 170 SHA256 613f5f63dffc78a75b8e12bd0df1ba7f27afccc7532b809c6ed14de1007bdc25 SHA512 2de67dccf7cc4fe6837c3efb996e16621dc7ddbf58ac725c5f57d0bc8c64036a2adab320f124da571d31bdbedd9aca46aa867a9186b7cee8500855360b6dfb5e WHIRLPOOL 7aa8b64e7a8fa384484d69f4fa024536e537ce70ba49c738f52977912418e2ada990a4626072b0f2c56dedc743a0c81800db6ea271ebd18c87542ec2ba6dd4ed
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlKtK8EACgkQso7CE7gHKw0kVgCg09UJouF8JyYMi8z7gAUtoTq3
+WzAAoN4ebOkJ8RyD4kl4Kqje6gztSAFT
+=rtrE
+-----END PGP SIGNATURE-----
