@@ -3,10 +3,10 @@ DEPEND=sys-libs/pam net-misc/openssh sys-devel/libtool
 DESCRIPTION=Uses ssh-agent to provide single sign-on
 EAPI=5
 HOMEPAGE=http://pam-ssh.sourceforge.net/
-KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc x86 ~amd64-linux ~ia64-linux ~x86-linux
+KEYWORDS=~alpha amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc x86 ~amd64-linux ~ia64-linux ~x86-linux
 LICENSE=BSD-2 BSD ISC
 RDEPEND=sys-libs/pam net-misc/openssh
 SLOT=0
 SRC_URI=mirror://sourceforge/pam-ssh/pam_ssh-1.98.tar.bz2
 _eclasses_=eutils	a82a329b538368791f5a6113c60e557e	flag-o-matic	65cef1287b9d62b1a0f180765d1e0c69	multilib	892e597faee02a5b94eb02ab512e7622	pam	5c1a9ef4892062f9ec25c8ef7c1f1e52	readme.gentoo	2466b2f6a77a9600954c6b99ebca6e02	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=2fe21d23ced35337493adb65271a046c
+_md5_=d4a1ffb5938c7a82d0efcdd6dac96a84
