@@ -1,5 +1,5 @@
 DEFINED_PHASES=compile install postinst prepare setup test
-DEPEND=mpi? ( virtual/mpi ) doc? ( >=app-text/poppler-0.12.3-r3[utils] dev-tex/latex2html virtual/tex-base >=dev-python/beautifulsoup-4 dev-python/lxml media-libs/netpbm ) virtual/fortran
+DEPEND=mpi? ( virtual/mpi ) doc? ( >=app-text/poppler-0.12.3-r3[utils] dev-tex/latex2html virtual/tex-base || ( ( >=dev-lang/python-2.7.5-r2:2.7 >=dev-python/beautifulsoup-4[python_targets_python2_7(-),python_single_target_python2_7(+)] dev-python/lxml[python_targets_python2_7(-),python_single_target_python2_7(+)] ) ( >=dev-lang/python-2.6.8-r3:2.6 >=dev-python/beautifulsoup-4[python_targets_python2_6(-),python_single_target_python2_6(+)] dev-python/lxml[python_targets_python2_6(-),python_single_target_python2_6(+)] ) ( >=dev-lang/python-3.3.2-r2:3.3 >=dev-python/beautifulsoup-4[python_targets_python3_3(-),python_single_target_python3_3(+)] dev-python/lxml[python_targets_python3_3(-),python_single_target_python3_3(+)] ) ( >=dev-lang/python-3.2.5-r2:3.2 >=dev-python/beautifulsoup-4[python_targets_python3_2(-),python_single_target_python3_2(+)] dev-python/lxml[python_targets_python3_2(-),python_single_target_python3_2(+)] ) ) media-libs/netpbm || ( >=dev-lang/python-2.7.5-r2:2.7 >=dev-lang/python-2.6.8-r3:2.6 >=dev-lang/python-3.3.2-r2:3.3 >=dev-lang/python-3.2.5-r2:3.2 ) ) virtual/fortran
 DESCRIPTION=Message-passing parallel language and runtime system
 EAPI=5
 HOMEPAGE=http://charm.cs.uiuc.edu/
@@ -10,5 +10,5 @@ RDEPEND=mpi? ( virtual/mpi ) virtual/fortran
 REQUIRED_USE=doc? ( ) cmkopt? ( !charmdebug !charmtracing ) charmproduction? ( !charmdebug !charmtracing )
 SLOT=0
 SRC_URI=http://charm.cs.uiuc.edu/distrib/charm-6.5.1.tar.gz
-_eclasses_=eutils	a82a329b538368791f5a6113c60e557e	flag-o-matic	65cef1287b9d62b1a0f180765d1e0c69	fortran-2	db8710b355fc5598015c4bc3aad3bdb0	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=6003933868ea6c7768b63b36e7bd50b3
+_eclasses_=eutils	a82a329b538368791f5a6113c60e557e	flag-o-matic	65cef1287b9d62b1a0f180765d1e0c69	fortran-2	db8710b355fc5598015c4bc3aad3bdb0	multilib	892e597faee02a5b94eb02ab512e7622	python-any-r1	08d3455b23110d650f173ab0a090818b	python-utils-r1	49ee0ca5e1019d8f256a23692dad2642	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=34f457ac673f761a12d58da816e55dd6
