@@ -11,13 +11,13 @@ AUX charm-6.5.1-static-library-fix.patch 17080 SHA256 1cebaeb901c88a4f35a148fd51
 DIST charm-6.5.1.tar.gz 19265741 SHA256 68aa43e2a6e476e116a7e80e385c25c6ac6497807348025505ba8bfa256ed34a SHA512 1a25c76f3699e30d0614e85f39ea0f594896cbc299b0e670c52fcea176171e8834ea7f9ba3ba0c1957598b0f1cbfa6a4ed9279ae0c030fa32faa6acca879b694 WHIRLPOOL 0def514af09c137b951842250fe112c68e573e8eff7d5911a71ccbe55cc38b319f1d9c4587e706777f748b0c1ef69b63c4161bbf663b05984a566ff325fa49c3
 EBUILD charm-6.5.1-r1.ebuild 5368 SHA256 07aeebc151441baa3aee6b3cddc6e36bf9ddaa516dc342c3478a6e95a3a17f7e SHA512 12d2afb4c88e900542e44d19c35fabe0502260e612b3da81fc60cca05ca3ddc652a1cce54960aa9a7bdd9b5f45986a13a2c911ae48307194f8f1ddaec845e218 WHIRLPOOL 1ecd4405bb5eaa962d1b3b56c32e8693cfd5ce06aa5874b07d9a89782f52313278fe61457b4a4f3c9a4a1122f02686ce0b3a72d68d8c67a7048024d606d0d9e1
 EBUILD charm-6.5.1-r2.ebuild 5431 SHA256 e40245a09e9889a053fb4ebaaa9f6651218993af1c94ae3699e0cd0a15e74767 SHA512 d181c08a298d8733456facc532953c0f018e53a1a032da816e39d40a6a05a0ec4c8ec93dd7b5bbe197835dd36951708ccdeb4b9548e697dca349a75fbf7fc083 WHIRLPOOL 52a48f96bb73bcff41b3e27ff5f518ed573350b6821d1634e106788d49ffe2356a6e1621dca0787432359e034bbc7310e9e683e00669b7c57647f4599b284a9f
-EBUILD charm-6.5.1-r3.ebuild 5301 SHA256 bff606507c6ebda5f13ee2681b71d93d60eba71706922a381cc2060cedb43aa5 SHA512 4f44c9c0603a936b81ef74ae5894df85be8fb543d84d5617aee364d741492ab5be42d4dc5ab18ba68663ce2292ad929a20b9136da038e383c3bde0cda539b5c7 WHIRLPOOL d0adbc9a33af9348da4c8936d526a9b239d2cbb104e919d925e0978e1fdc662ec8ec57d7415a66d4a7a0add3223bf2ea5396ea7bc48daa53e11d4260be21bf9d
-MISC ChangeLog 6886 SHA256 02e5d58241e4dd95df7447ccebc18f20435526a8c37d6f6a0928509a89484589 SHA512 23432abb3ffba4e0015be3dd511767b27510dc727ac1da80479c4453809d9e60b825885187ea6d488b1eafaf8079490ed0d18fb4bb3f6537672e989183eade0a WHIRLPOOL 3285cc2b32bc6ab1d028e5fad7c3f642b44737ed39f415cbd36fac78e636c5f24a9ace42d6cea247fdbbf5ae8d43d964f52aa5bb8dc793533c6089533e741ed6
+EBUILD charm-6.5.1-r3.ebuild 5496 SHA256 01488757549d007923056f62804e889987e11b8e1855c1114e04c0750f9cc1d9 SHA512 2a57c3dbfe4d6169df664b805edb373a389bccb34ea2945dd57bfdb4b6bc2689cbbdc54b01e96a3f4b77cf3fd4abe6939a8491dc1b091073787f60a43b4376a3 WHIRLPOOL c545712c7d8c711ad2997161afc43ad71493c10647811c21706b56ca71140ba706cddd51b5a3f91672821730e6e4ebf7baadb78b6e99e624ea775a7ca847eb04
+MISC ChangeLog 7049 SHA256 b4a1e83b746e470d0e53672042d56714406079c86ef266ed6220f0c825fa8b82 SHA512 40eac592954e492cbc26842994b68c195f92fafc3f159999b5c9d1caf90f26e748a9c01709f6a32ba06bc5110e6899fd0a3885a3bf0540b1e068eddf260aed86 WHIRLPOOL c00fe648fc913a51485362c35fa91fb1c2a4fb7b498273e14723d2d55e07c0da5371d2841adac4ba20dee03ca346921734ccac999c66d25825607317bbc48956
 MISC metadata.xml 801 SHA256 4f15971f2c242322338a8c9a08d45707ce56a9a8d09e4e83a5808dd0754d21e4 SHA512 570f95d5d7609b34529524f7932327d1b1a9a3734211a14696fa8156475cc7a0d61a9fcf81f2732acd8f8ae61f88504635bd4278c061fe9e2ee6b796e9860ad5 WHIRLPOOL 70592d90dd5c757e5ec748b809e4dba8acd1f2900a83d639bd0d2f17bf99f957153d5a7664a8950167dc5b89331c2ea2e462afb592c1de57acf083e2e86e2f42
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlKrZUoACgkQf15tZKyRylK+dwCfRGAzQCWN0Q4N7P1+UMWnlUNM
-AcMAnRwZgbWDS2HLO1RH49b3tLeEUaLD
-=oDVu
+iEYEAREIAAYFAlKtLeIACgkQf15tZKyRylKBbQCguERvYQeGT4azQksXfkVcvWL5
+9rsAnR8Jp7QMwoMh+Pao0B6J+oGF4Bv+
+=Z4m6
 -----END PGP SIGNATURE-----
