@@ -1,6 +1,10 @@
 # ChangeLog for sys-cluster/charm
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/charm/ChangeLog,v 1.39 2013/12/13 19:51:35 nicolasbock Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/charm/ChangeLog,v 1.40 2013/12/15 04:19:41 nicolasbock Exp $
+
+  15 Dec 2013; Nicolas Bock <nicolasbock@gentoo.org> charm-6.5.1-r3.ebuild:
+  sys-cluster/charm-6.5.1-r3: Fix python build time requirements for
+  documentation.
 
 *charm-6.5.1-r3 (13 Dec 2013)
 
