@@ -1,6 +1,9 @@
 # ChangeLog for sys-auth/pam_ssh
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-auth/pam_ssh/ChangeLog,v 1.49 2013/12/14 14:51:58 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-auth/pam_ssh/ChangeLog,v 1.50 2013/12/15 07:34:34 pacho Exp $
+
+  15 Dec 2013; Pacho Ramos <pacho@gentoo.org> pam_ssh-1.98.ebuild:
+  amd64 stable, bug #459960
 
   14 Dec 2013; Johannes Huber <johu@gentoo.org> pam_ssh-1.98.ebuild:
   x86 stable, bug #459960
